--- a/glide.yaml
+++ b/glide.yaml
@@ -4,3 +4,5 @@ import:
   version: ~2.5.11
 - package: github.com/jteeuwen/go-bindata
   version: ~3.0.7
+- package: github.com/stretchr/testify
+  version: ^1.1.4
