--- a/.travis.yml
+++ b/.travis.yml
@@ -8,7 +8,10 @@ go:
 
 install:
   - wget -q -O /tmp/glide.tar.gz https://github.com/Masterminds/glide/releases/download/v0.12.3/glide-v0.12.3-linux-amd64.tar.gz
-  - cd /tmp && tar -xvf glide.tar.gz && linux-amd64/glide -v
+  - cd /tmp
+  - tar -xvf glide.tar.gz
+  - linux-amd64/glide -v
+  - cd ${TRAVIS_BUILD_DIR}
   - /tmp/linux-amd64/glide install
 
 allow_failures:
