--- a/.travis.yml
+++ b/.travis.yml
@@ -14,6 +14,7 @@ install:
   - export PATH=${PATH}:/tmp/linux-amd64
   - cd ${TRAVIS_BUILD_DIR}
   - glide install
+  - go get -u github.com/jteeuwen/go-bindata/...
 
 allow_failures:
   - go: tip
